--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHTML.js",
+    "previewDist": "node previewDist",
+    "build": "npm-run-all -s generate webpackBuild",
+    "webpackBuild": "webpack",
+    "dev": "npm-run-all -s generate webpackDev",
+    "webpackDev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,11 +25,19 @@
   "homepage": "https://github.com/Alex-Rudoy/social-react-web-app#readme",
   "dependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "dotenv-webpack": "^1.8.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
+    "html-webpack-harddisk-plugin": "^1.0.2",
+    "html-webpack-plugin": "^4.3.0",
     "immer": "^7.0.1",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
